# bics_nornir

./: .gitlab-ci.yml  Makefile  README.md  docker_compose.yaml  nornir_netconf.ipynb  pyproject.toml
bics_nornir/plugins/connections/: ncclient.py
bics_nornir/plugins/tasks/data/: __init__.py  download_configs.py  load_intent.py  load_merge_yaml.py  load_service_intents.py  render_templates.py
bics_nornir/plugins/tasks/networking/: __init__.py  nc.py
bics_nornir/plugins/tasks/services/: __init__.py  eline.py
examples/: README.txt  nornir_netconf.ipynb
examples/inventory/: defaults.yml  groups.yml  hosts.yml
