[tool.poetry]
name = "bics_nornir"
version = "0.1.0"
description = "BICS-specific plugins for Nornir"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.7"
xmltodict = "^0.12.0"
nornir = "^2.1"
ncclient = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
